src/objects/Batch_Load_Status_Message__c.object
<CustomObject>
    <description>Object to record the audit trail information for batch loads</description>
    <fields>
        <fullName>Error_Log_File_Name__c</fullName>
        <label>Error Log File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Loaded__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <label>Status Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Success_Log_file_name__c</fullName>
        <label>Success Log file name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Batch Load Status Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Object_Loaded__c</columns>
        <columns>Status_Message__c</columns>
        <columns>Success_Log_file_name__c</columns>
        <columns>Error_Log_File_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object to record the audit trail informa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Load Status Message</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>